--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,6 @@ body {
     color: #000;
 }
 
-section {
-    width: 100%;
-    position: absolute;
-    top: 20%;
-}
 
 a {
     font-family: "Raleway", Helvetica, Arial, sans-serif;
@@ -39,7 +34,6 @@ h1 {
 
 h3 {
     text-align: center;
-    margin-top: 100px;
     font-size: 42px;
 }
 
@@ -47,17 +41,64 @@ h4 {
     text-align: center;
     color: #999;
     opacity: 80%;
-    margin-left: 30%;
-    margin-right: 30%;
 }
 
-nav {
-    width: 40%;
-    margin: auto;
+cite {
+    display: inline-block;
 }
 
-footer {
-    width: 100%;
-    position: absolute;
-    bottom: 7.5%;
+@media (min-width: 992px) {
+
+    section {
+        width: 100%;
+        position: absolute;
+        top: 20%;
+    }
+
+    nav {
+        width: 40%;
+        margin: auto;
+    }
+
+    h3 {
+        margin-top: 100px;
+    }
+
+    footer {
+        width: 100%;
+        position: absolute;
+        bottom: 7.5%;
+    }
+
+}
+
+@media (max-width: 992px) {
+
+    h1 {
+        margin-bottom: 60px;
+    }
+
+    section {
+        width: 100%;
+        margin-top: 15%;
+    }
+
+    nav {
+        width: 100%;
+    }
+
+    footer {
+        width: 100%;
+        margin-top: 100px;
+    }
+
+}
+
+@media (min-width: 600px) {
+
+    h4 {
+        margin-left: 30%;
+        margin-right: 30%;
+    }
+
 }
