--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,18 @@ cite {
     display: inline-block;
 }
 
+.btc {
+    width: 100%;
+    text-align: center;
+}
+
+small {
+    font-size: 8px;
+    font-family: monospace;
+    color: #555;
+    font-weight: 700;
+}
+
 @media (min-width: 992px) {
 
     section {
