Changed the quote emdash to be a ::before element in CSS.

--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,10 @@ cite {
     display: inline-block;
 }
 
+cite::before {
+    content: " — ";
+}
+
 .btc {
     width: 100%;
     text-align: center;
