--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,11 @@ a:hover {
     color: #000;
 }
 
+a.secret {
+    color: inherit;
+    font-family: inherit;
+}
+
 h1 {
     text-align: center;
     font-size: 72px;
