--- a/css/photos.css
+++ b/css/photos.css
@@ -1,6 +1,6 @@
 img {
     display: block;
-    margin: 1.5rem auto 3rem auto;
+    margin: 1.5rem auto 1.5rem auto;
     max-height: 70vh;
     max-width: 80vw;
 }
@@ -22,6 +22,10 @@ body {
 .buttons {
     display: inline-block;
     margin: 0 auto;
+}
+
+.statement {
+    margin-top: 1.5rem;
 }
 
 button {
