--- a/css/photos.css
+++ b/css/photos.css
@@ -1,22 +1,30 @@
 img {
-    display: block;
-    margin: 1.5rem auto 1.5rem auto;
-    height: 450px;
+    max-height: 450px;
+    max-width: 600px;
+    margin: 15px auto 25px auto;
 }
 
 h1 {
     margin: 10px 0;
 }
 
-.photo-container { 
+.page-container { 
     max-width: 600px;
     width: 80%;
-    margin: 3rem auto;
+    margin: 30px auto;
     color: #333;
+}
+
+.photo-container { 
+    height: 490px;
+    width: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .button-wrapper {
     text-align: center;
+    width: 100%;
 }
 
 .buttons {
