--- a/css/photos.css
+++ b/css/photos.css
@@ -37,5 +37,35 @@ h1 {
 }
 
 button {
-    margin: 0 5px;
+    background: inherit;
+    margin: 0 25px;
+    padding: 0;
+    border-radius: 25px;
+    color: rgba(0, 0, 0, 0.25);
+    border-color: rgba(0, 0, 0, 0.25);
+    border-width: 2px;
+}
+
+button:focus {
+    border-color: rgba(0, 0, 0, 0.75);
+    outline: none;
+}
+
+button:hover {
+    color: rgba(0, 0, 0, 1);
+    border-color: rgba(0, 0, 0, 1);
+}
+
+button:active {
+    color: rgba(0, 0, 0, 1);
+    border-color: rgba(0, 0, 0, 1);
+    border-style: solid;
+}
+
+.button-inner {
+    user-select: none;
+    height: 25px;
+    width: 25px;
+    line-height: 25px;
+    font-weight: bold;
 }
